--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
                 <h1>Charizard</h1>
 
                 <div id="contenedorCaracteristicas">
-                    <div>Tipo</div>
-                    <div>Poder</div>
-                    <div>Evolución</div>
-                    <div>Enemigo</div>
+                    <div>Tipo: Dragon</div>
+                    <div>Poder: Fuego</div>
+                    <div>Evolución: Mega-Charizard X</div>
+                    <div>Enemigo: </div>
+
+
+                    <div>Velocidad: 3 Pts </div>
+                    <div>Fortaleza: 3 Pts</div>
+                    <div>Resistencia: 5 Pts</div>
+                    <div>Precisión: 5 Pts</div>
                 </div>
 
             </div>
