se temrino carta charizard

--- a/index.html
+++ b/index.html
@@ -8,35 +8,29 @@
     </head>
     <body>
         <div id="carta">
-
-
             <div id="contenerdorImagen">
                 <img src="/img/charizard.jpeg" alt="" />
             </div>
 
-
-
             <div id="contenedorInformacion">
-
-
-                <h1>Charizard</h1>
+                <div id="cajaPresentacion">
+                    <img src="/img/dragon.png" alt="" />
+                    <h1>Charizard</h1>
+                    <img src="/img/fuego.png" alt="" />
+                </div>
 
                 <div id="contenedorCaracteristicas">
                     <div>Tipo: Dragon</div>
                     <div>Poder: Fuego</div>
                     <div>Evolución: Mega-Charizard X</div>
-                    <div>Enemigo: </div>
+                    <div>Enemigo: Todos</div>
 
-
-                    <div>Velocidad: 3 Pts </div>
+                    <div>Velocidad: 3 Pts</div>
                     <div>Fortaleza: 3 Pts</div>
                     <div>Resistencia: 5 Pts</div>
                     <div>Precisión: 5 Pts</div>
                 </div>
-
             </div>
-
-
         </div>
     </body>
 </html>
